# space-invader

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: alien.cpp  game.cpp  laser.cpp  main.cpp  spaceship.cpp
src/header/: alien.hpp  game.hpp  laser.hpp  spaceship.hpp
